--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "appwrite": "^16.1.0",
     "html-react-parser": "^5.2.2",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
